[gd_scene load_steps=5 format=3 uid="uid://87ep7faig03e"]

[ext_resource type="Texture2D" uid="uid://8gyxlmu2udt" path="res://frieren.jpg" id="1_06t4h"]
[ext_resource type="Script" uid="uid://dp6xon0wy7kgj" path="res://UI/main_menu.gd" id="1_7vrkn"]
[ext_resource type="PackedScene" uid="uid://b3dt8f8bywpyw" path="res://UI/settings_menu.tscn" id="2_d8nwk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("1_06t4h")

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")
settings_scene = ExtResource("2_d8nwk")

[node name="bg_image" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="play_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 197.0
offset_right = 237.0
offset_bottom = 258.0
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Play"

[node name="load_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 268.0
offset_right = 237.0
offset_bottom = 329.0
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Load Saved"

[node name="settings_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 339.0
offset_right = 237.0
offset_bottom = 400.0
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Settings
"

[node name="exit_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 410.0
offset_right = 237.0
offset_bottom = 471.0
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Exit"

[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
